--- a/public/static/form.html
+++ b/public/static/form.html
@@ -804,15 +804,12 @@ form.addEventListener('submit', (event) => {
   }
   .ring-ring {
     --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
-    --tw-ring-offset-shadow: var(--tw-ring-offset-inset,/*!*/) 0 0 0 var(--tw-ring-offset-width,/*!*/0px) var(--tw-ring-offset-color,/*!*/
-}
-  step{
+    --tw-ring-offset-shadow: var(--tw-ring-offset-inset,0 0 0) 0 0 0 var(--tw-ring-offset-width,0px) var(--tw-ring-offset-color,#0000);
+  }
+  .step{
     display:block;
   }
-  .hidden{
-    display: none;
-  
-  }
+  /* Remove conflicting hidden class - use tailwind 'hidden' instead in HTML */
 </style>
 <!--End of content-->
   <footer class="py-8 px-8 bg-secondary text-white" style="
